maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (x!=0){ if  ( getIndication(x-1,y)=message-1){void setDirection(Direction.SOUTH)}}
                   ^JediEscaper:33: error: not found: value void
  if (x!=0){ if  ( getIndication(x-1,y)=message-1){void setDirection(Direction.SOUTH)}}
                                                   ^JediEscaper:34: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)=message-1){void setDirection(Direction.NORTH)}}
                                  ^JediEscaper:34: error: not found: value void
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)=message-1){void setDirection(Direction.NORTH)}}
                                                                  ^JediEscaper:35: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)=message-1){void setDirection(Direction.EAST)}}
                                  ^JediEscaper:35: error: not found: value void
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)=message-1){void setDirection(Direction.EAST)}}
                                                                  ^JediEscaper:36: error: not found: value i
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){void setDirection(Direction.WEST)}}}
                                                       ^JediEscaper:36: error: not found: value void
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){void setDirection(Direction.WEST)}}}
                                                            ^